# ds-repo-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/project_slug/: __init__.py  hello.py
tests/: test_sanity.py
